# install-esmf-action

./: CONTRIBUTING.md  README.md  RELEASES.md  action.yml  advanced-example.md
.github/workflows/: acceptance-test.yml  adv-example-test.yml  complete-test.yml  example-test.yml  quick-test.yml  test-action.yml
__tests__/: esmpy_test.py  esmxBuild.yaml  esmxRun.yaml
__tests__/Cap/: CMakeLists.txt  cap.F90
